--- a/SeleccionFutbol.html
+++ b/SeleccionFutbol.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="/css/Fondo.css">
     </head>
     <body>
       <nav class="navbar" role="navigation" aria-label="main navigation">
