--- a/Camisetas.html
+++ b/Camisetas.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/Fondo.css">
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
@@ -64,7 +65,7 @@
                             <a href=""><img src="imag/camisas-nike-brasil-2020-21-8.jpg"></a>
                             <h1 >Camiseta Seleccion Brasil  6.999$</h1>
                         </div>
-                    </form>
+                    </form> |
                 </div>
                 <div class="column is-2">
                     <form class="box -p34 m-6">
@@ -106,6 +107,17 @@
                             <h1>Camiseta Manchester United $9999 </h1>
                         </div>
                     </form>
+                </div>
+                <div class=" columns">
+                  <div class="column is-2">
+                    <form class="box -p34 m-6">
+                      <div class="field">
+                          <a href=""><img src="imag/camiseta-adidas-manchester-united-oficial-roja-$9999.jpg"></a>
+                          <h1>Camiseta Manchester United $9999 </h1>
+                      </div>
+                  </form>
+
+                  </div>
                 </div>
         </div>
     </body>
