--- a/Camisetas.html
+++ b/Camisetas.html
@@ -95,7 +95,7 @@
                 <div class="column is-2">
                     <form class="box -p34 m-6">
                         <div class="field">
-                            <a href=""><img src="imag/camiseta-adidas-bayern-munchen-oficial-roja-$12209.png"></a>
+                            <a href=""><img src="imag/"></a>
                             <h1>Camiseta Bayern Munchen $12209 </h1>
                         </div>
                     </form>
