--- a/SportAppLogin.html
+++ b/SportAppLogin.html
@@ -9,29 +9,32 @@
   <body>
     <div class="container">
         <div class="columns">
-            <div class="column is-full-desktop has-text-centered-desktop">
-                <div class="">
+          <div class="column is-one-third-desktop"></div>
+          <div class="column has-text-centered-desktop is-one-third-desktop"> 
+                <div class="box1">
                     <img src="imag/Minilogo.PNG">
-                    <div class="box mt-6">
+                    <div class="box ">
                         <h1 class="title is-3">Iniciar Sesion </h1>
                         <div class="field">
-                          <label class="label">Email</label>
+                          <label class="label">Usuario</label>
                           <div class="control">
-                            <input class="input" type="email" placeholder="alex@ejemplo.com">
+                            <input class="input" type="usuario" placeholder="Nombre de Usuario">
                           </div>
                         </div>
                         <div class="field">
                           <label class="label">Constraseña</label>
                           <div class="control">
+
                             <input class="input" type="password" placeholder="********">
                           </div>
                         </div>
                         <div class="mt-4">
-                          <a href="PaginaInicio.html" class="button is-outline is-primary is-block">Iniciar Sesion</a>
+                          <a href="Camisetas.html  " class="button is-outline is-success">Iniciar Sesion</a>
                         </div>
                         <div class="mt-4">
-                          <a href="#">¿olvidaste tu contraseña?</a><br>
-                          <a href="#">¿no tienes cuenta?</a>
+                          <a href="OlvidasteTuContraseña.html">¿olvidaste tu contraseña?</a><br>
+                          <a href="Registro.html">¿no tienes cuenta?</a>
+                          
                         </div>
                     </div>
                 </div>
