--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -19,7 +19,7 @@
       
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
-            <a class="navbar-item">
+            <a class="navbar-item"href="">
               Home
             </a>
             <div class="navbar-item has-dropdown is-hoverable">
@@ -48,12 +48,7 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary">
-                  <strong>Sign up</strong>
-                </a>
-                <a class="button is-light">
-                  Log in
-                </a>
+                
               </div>
             </div>
           </div>
