--- a/SportAppLogin.html
+++ b/SportAppLogin.html
@@ -36,6 +36,11 @@
                           <a href="Registro.html">¿no tienes cuenta?</a>
                         </div>
                     </div>
+                    <div class="box 1">
+                      <img src="imag/logo de descargar/download.png" width="86" heigh="56">
+                      
+
+                    </div>
                 </div>
             </div>
         </div>
