--- a/Registro.html
+++ b/Registro.html
@@ -11,7 +11,7 @@
         <div class="columns">
             <div class="column is-one-third-desktop"></div>
             <div class="column has-text-centered-desktop is-one-third-desktop">
-                    <img src="imag/Minilogo.PNG">
+                    <img src="imag/Logo/Minilogo.PNG">
                     <div class="box">
                         <h1 class="title registro-titulo">Registrate</h1>
                         <div>
