avanze camisetas.js

--- a/IniciarSesionSportApp.html
+++ b/IniciarSesionSportApp.html
@@ -12,7 +12,7 @@
           <div class="column is-one-third-desktop"></div>
           <div class="column has-text-centered-desktop is-one-third-desktop"> 
                 <div class="box1">
-                    <img src="imag/Minilogo.PNG">
+                    <img src="imag/Logo/Minilogo.PNG">
                     <div class="box ">
                         <h1 class="title is-3">Iniciar Sesion </h1>
                         <div class="field">
@@ -29,7 +29,7 @@
                           </div>
                         </div>
                         <div class="mt-4">
-                          <a href="Camisetas.html  " class="button is-outline is-success">Iniciar Sesion</a>
+                          <a href="PaginaInicio.html" class="button is-outline is-success">Iniciar Sesion</a>
                         </div>
                         <div class="mt-4">
                           <a href="OlvidasteTuContraseña.html">¿olvidaste tu contraseña?</a><br>
