--- a/Registro.html
+++ b/Registro.html
@@ -27,7 +27,7 @@
                             <input class="input" type="password" placeholder="********">   
                         </div>
                         <div class="mt-5 registro-CrearCuenta">
-                            <a href="Camisetas.html " class="button is-block is-medium is-success ">Crear Cuenta</a>
+                            <a href="PaginaInicio.html" class="button is-block is-medium is-success ">Crear Cuenta</a>
                         </div>
                     </div>
             </div>
