--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -7,7 +7,7 @@
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="">
-            <img src="imag/Logo.jpg" width="86" height="56">
+            <img src="imag/Logo/Logo.jpg" width="86" height="56">
           </a>
       
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
