--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>     
-    <h1>hola</h1>
+    <div>
+        <img src="imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
+        <h1 class="title -2 are-medium">Camiseta Argentina Qatar 2022</h1>
+    </div>
     
     <div id="camisetas">
 
