--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/Fondo.css">
+    <title>Camiseta_Ajax</title>
 </head>
-<body>     
-    <div>
-        <img src="imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
-        <h1 class="title -2 are-medium">Camiseta Argentina Qatar 2022</h1>
-    </div>
-    
-    <div id="camisetas">
-
-
-    </div>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
-    <script src="js/camisetas.js"></script>
-    
+<body> 
+  <section class="">
+    <div class="box">
+      <img src=">
+     </div>
+  </section>
+  
 </body>
 </html>
