--- a/Camisetas.html
+++ b/Camisetas.html
@@ -2,14 +2,14 @@
 
 <head>
   <title>Sport-App-Camisetas</title>
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/Fondo.css">
+  <link rel="stylesheet" href="/css/Fondo.css">
+  <link rel="stylesheet" href="/css/bulma.min.css">
 
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="">
-        <img src="imag/Logo/Logo.jpg" width="86" heigh="56">
+        <img src="/imag/Logo/Logo.jpg" width="86" heigh="56">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -60,6 +60,7 @@
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/camisetas.js"></script>
+  
 </body>
 </head>
 
