--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <link rel="stylesheet" href="css/Fondo.css">
-    <title>Camiseta_Ajax</title>
+  <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/camisestas.css">
+  <title>Camiseta_Ajax</title>
 </head>
-<body> 
-  <section class="">
-    <div class="box">
-      <img src=">
-     </div>
-  </section>
-  
+
+<body>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="/imag/Logo/Logo.jpg" width="112" height="28">
+      </a>
+
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          Home
+        </a>
+
+        <a class="navbar-item">
+          Documentation
+        </a>
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Hombre
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Camisetas.html">
+              Camisetas
+            </a>
+            <a class="navbar-item" href="/">
+              Botines
+            </a>
+            <a class="navbar-item">
+              Shorts
+            </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    </div>
+    </div>
+    </div>
+  </nav>
+
+  <div class="camisetas">
+    <div class="columns">
+      <div class="column has-text-centered-desktop is-one-third-desktop">
+        <div class="box1">
+          <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+
 </body>
+
 </html>
