--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -143,7 +143,7 @@
       <div class="column has-text-centered-desktop is-one-third-desktop">
         <div class="box2">
           <h1 class="title is-4">ESPECIFICACIONES: </h1>
-          <li>Material: 100% Poliester reciclado</li>
+          <li class="column has-text-centered-desktop is-one-">Material: 100% Poliester reciclado</li>
           <li>Origen: Argentina</li>
           </div>
         </div>
