--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -4,7 +4,9 @@
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
   <link rel="stylesheet" href="/css/camisetas.css">
-  <link rel="stylesheet" href="/css/descripcion.css">
+  <link rel="stylesheet" href="/css/especificacion.css">
+  <link rel="stylesheet" href="/css/detalles.css">
+  <link rel="stylesheet" href="/css/talles.css">
   <title>Camiseta_Ajax</title>
 </head>
 
@@ -138,13 +140,40 @@
     </div>
   </div>
 </div>
-  <div class="descipcion">
+  <div class="especificacion">
     <div class="columns">
-      <div class="column has-text-centered-desktop is-one-third-desktop">
+      <div class="column is-offset-5-desktop is-one-third-mobile">
         <div class="box2">
-          <h1 class="title is-4">ESPECIFICACIONES: </h1>
-          <li class="column has-text-centered-desktop is-one-">Material: 100% Poliester reciclado</li>
-          <li>Origen: Argentina</li>
+          <div class="content is-normal">
+            <h1 class="title is-4">ESPECIFICACIONES: </h1>
+          <li>Material: 100% Poliester reciclado.</li>
+          <li>Origen: Origen Estados Unidos.</li>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="detalles"> 
+    <div class="columns">
+      <div class="column text-centered-desktop is-offset-3-desktop is-4-mobile is-offset-8-mobile">
+        <div class="box3">
+              <h1 class="title is-4">DETALLES:</h1>
+            <p>Deja la pasion, que tienes con la camiseta del Ajax. Ideal para jugar con tus amigos.
+              <li>Logo adidas bordado.</li>
+              <li>Escudo ajax aplicado.</li>
+            </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="talles">
+    <div class="columns">
+      <div class="column text-centered-desktop is-offset-1-desktop">
+        <div class="box4">
+          <figure class="image is-3by2">
+            <img src="/imag/Logo/TallesCamisetas.PNG">
+          </figure>
           </div>
         </div>
       </div>
