--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -140,40 +140,92 @@
     </div>
   </div>
 </div>
-  <div class="especificacion">
-    <div class="columns">
-      <div class="column is-offset-5-desktop is-one-third-mobile">
-        <div class="box2">
-          <div class="content is-normal">
-            <h1 class="title is-4">ESPECIFICACIONES: </h1>
-          <li>Material: 100% Poliester reciclado.</li>
-          <li>Origen: Origen Estados Unidos.</li>
-          </div>
+  
+<div class="detalles"> 
+  <div class="columns">
+    <div class="column text-centered-desktop is-offset-1-desktop is-full-mobile">
+      <div class="box3">
+        <div class="tile is-ansestor">
+          <div class="tile is-4">
+              <div class="tile is-child">
+                <h1 class="title is-4">DETALLES:</h1>
+                <p>Deja la pasion, que tienes con la camiseta del Ajax. Ideal para jugar con tus amigos.
+                    <li>Logo adidas bordado.</li>
+                    <li>Escudo ajax aplicado.</li>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="detalles"> 
+</div>
+<div class="talles">
     <div class="columns">
-      <div class="column text-centered-desktop is-offset-3-desktop is-4-mobile is-offset-8-mobile">
-        <div class="box3">
-              <h1 class="title is-4">DETALLES:</h1>
-            <p>Deja la pasion, que tienes con la camiseta del Ajax. Ideal para jugar con tus amigos.
-              <li>Logo adidas bordado.</li>
-              <li>Escudo ajax aplicado.</li>
-            </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="talles">
-    <div class="columns">
-      <div class="column text-centered-desktop is-offset-1-desktop">
+      <div class="column  is-offset-1-desktop is-offset-1-mobile">
         <div class="box4">
-          <figure class="image is-3by2">
-            <img src="/imag/Logo/TallesCamisetas.PNG">
-          </figure>
+                  <div class="table-container">
+                    <table class="table is-bordered">
+                      <thead>
+                        <tr>
+                          <th>Talle</th>
+                          <th>Pecho</th>
+                          <th>Cintura</th>
+                          <th>Cadera</th>
+                          <th>Largo</th>
+                        </tr>
+                      </thead>
+                      <tfoot>
+                      <tbody>
+                        <tr>
+                          <td>XS</td>
+                          <td>46</td>
+                          <td>44</td>
+                          <td>46</td>
+                          <td>72</td>
+                        </tr>
+                        <tr class="is-selected">
+                          <td>S</td>
+                          <td>48</td>
+                          <td>46</td>
+                          <td>48</td>
+                          <td>74</td>
+                        </tr>
+                        <tr>
+                          <td>M</td>
+                          <td>52</td>
+                          <td>50</td>
+                          <td>52</td>
+                          <td>76</td>
+                        </tr>
+                        <tr class="is-selected">
+                          <td>L</td>
+                          <td>56</td>
+                          <td>55</td>
+                          <td>56</td>
+                          <td>79</td>
+                        </tr>
+                        <tr>
+                          <td>XL</td>
+                          <td>61</td>
+                          <td>61</td>
+                          <td>61</td>
+                          <td>81</td>
+                        </tr>
+                        <tr class="is-selected">
+                          <td>XXL</td>
+                          <td>68</td>
+                          <td>67</td>
+                          <td>68</td>
+                          <td>84</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
