--- a/IniciarSesionSportApp.html
+++ b/IniciarSesionSportApp.html
@@ -37,9 +37,7 @@
                         </div>
                     </div>
                     <div class="box 1">
-                      <img src="imag/logo de descargar/download.png" width="86" heigh="56">
-                      
-
+                      <img src="/imag/logo de descargar/download.png de descargar/download.png" width="86" heigh="56">
                     </div>
                 </div>
             </div>
