--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -130,7 +130,7 @@
     <div class="tile is-6 is-vertical is-parent">
         <div class="tile is-child box">
              <figure class="image">
-                <img src="/imag/imag-Camisetas/Camisetas-Brasil/3.jpg">
+                <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
@@ -264,7 +264,7 @@
               <li><a></a></li>
             </ul>
             <p class="menu-label">
-              Administration
+              CLIENTES
             </p>
             <ul class="menu-list">
               <li><a>Team Settings</a></li>
@@ -281,12 +281,19 @@
               <li><a>Authentication</a></li>
             </ul>
             <p class="menu-label">
-              Transactions
+              METODOS DE PAGO 
             </p>
             <ul class="menu-list">
-              <li><a>Payments</a></li>
-              <li><a>Transfers</a></li>
-              <li><a>Balance</a></li>
+              <li><a>Efectivo</a></li>
+              <li><a>Transferencias</a></li>
+              <li><a>Tarjetas Debito/Credito</a></li>
+            </ul>
+            <p class="menu-label">
+              HOLA
+            </p>
+            <ul class="menu-list">
+              <li><a>HOLA MUNDO</a></li>
+
             </ul>
           </aside>
     </div>
