--- a/Camisetas/Camiseta_Palmeira.html
+++ b/Camisetas/Camiseta_Palmeira.html
@@ -80,13 +80,13 @@
         </a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/Camisetas.html">
-            Camisetas
+            Nike
           </a>
           <a class="navbar-item" href="">
-            Botines
+            Adidas
           </a>
           <a class="navbar-item">
-            Shorts
+            Puma
           </a>
         </div>
       </div>
@@ -96,13 +96,13 @@
         </a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/Camisetas.html">
-            Camisetas
+            Futbol
           </a>
           <a class="navbar-item" href="">
-            Botines
+            Basquet
           </a>
           <a class="navbar-item">
-            Shorts
+            Tenis
           </a>
         </div>
       </div>
@@ -112,13 +112,13 @@
         </a>
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/Camisetas.html">
-            Camisetas
+            Gorras
           </a>
           <a class="navbar-item" href="">
-            Botines
+            Bolsos
           </a>
           <a class="navbar-item">
-            Shorts
+            Mochilas
           </a>
         </div>
       </div>
@@ -130,7 +130,7 @@
     <div class="tile is-6 is-vertical is-parent">
         <div class="tile is-child box">
              <figure class="image">
-                <img src="/imag/imag-Camisetas/Camisetas-Brasil/4.jpg">
+                <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
@@ -259,37 +259,53 @@
               NOSOTROS
             </p>
             <ul class="menu-list">
-              <li><a>Acerca de nosotros</a></li>
-              <li><a>Nuestras sucrsales</a></li>
-              <li><a></a></li>
+              <li><a href="">Acerca de Nosotros</a></li>
+              <li><a href="">Nuestras Sucrsales</a></li>
+              <li><a href="">Contacto</a></li>
+              <li><a href="">Trábaja con Nosotros</a></li>
             </ul>
+
+            <p class="menu-label">INFORMACIÓN</p>
+            <ul class="menu-list">
+              <li><a href="">Talles</a></li>
+              <li><a href="">Promociones de Compras</a></li>
+              <li><a href="">Cómo Comprar</a></li>
+              <li><a href="">Costos y Formas de Envio</a></li>
+              <li><a href="">Garantías</a></li>
+              <li><a href="">Políticas de Cambio</a></li>
+              <li><a href="">Políticas de Devoluciones</a></li>
+              <li><a href="">Preguntas Frecuentes</a></li>
+              <li><a href="">Políticas de Privacidad</a></li>
+              <li><a href="">Defensa del Consumidor</a></li>
+              <li><a href="">Botón de Arrepentiemiento</a></li>
+            </ul>
+
             <p class="menu-label">
-              Administration
+              CLIENTES
             </p>
             <ul class="menu-list">
-              <li><a>Team Settings</a></li>
-              <li>
-                <a class="is-active">Manage Your Team</a>
-                <ul>
-                  <li><a>Members</a></li>
-                  <li><a>Plugins</a></li>
-                  <li><a>Add a member</a></li>
-                </ul>
-              </li>
-              <li><a>Invitations</a></li>
-              <li><a>Cloud Storage Environment Settings</a></li>
-              <li><a>Authentication</a></li>
+              <li><a href="/Registro.html">Ingresa o registrate</a></li>
+              <li><a href="">Mi cuenta</a></li>
+              <li><a href="">Mi lista</a></li>
+              <li><a href="">Mapa del sitio</a></li>
             </ul>
+
             <p class="menu-label">
-              Transactions
+              METODOS DE PAGO 
             </p>
             <ul class="menu-list">
-              <li><a>Payments</a></li>
-              <li><a>Transfers</a></li>
-              <li><a>Balance</a></li>
+              <li><a href="">Efectivo</a></li>
+              <li><a href="">Transferencias</a></li>
+              <li><a href="">Tarjetas Debito/Credito</a></li>
             </ul>
+            
           </aside>
     </div>
+            <div class="box">
+              <figure class="image">
+                <img src="/imag/Logo/Logo.jpg">
+              </figure>
+            </div>
     
 </div>
 
