--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="css/bulma.min.css">
+
     </head>
     <body>
       
@@ -34,7 +35,7 @@
                 <a class="navbar-item">
                   Tenis
                 </a>
-                <a class="navbar-item">
+                <a class="navbar-item" href="SeleccionBasquet.html">
                   Basquet 
                 </a>
                 <hr class="navbar-divider">
