--- a/SeleccionFutbol.html
+++ b/SeleccionFutbol.html
@@ -1,13 +1,16 @@
 <html>
     <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sección Futbol</title>
     <link rel="stylesheet" href="css/bulma.min.css">
-    <link rel="stylesheet" href="/css/Fondo.css">
+    <link rel="stylesheet" href="/css/FondoFutbol.css">
     </head>
     <body>
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="">
-            <img src="imag/Logo.jpg" width="86" height="56">
+            <img src="imag/Logo/Logo.jpg" width="86" height="56">
           </a>
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
@@ -25,7 +28,6 @@
               <a class="navbar-link">
                 Futbol
               </a>
-      
               <div class="navbar-dropdown">
                 <a class="navbar-item" href="Camisetas.html">
                   Camiseta
