--- a/Camisetas.html
+++ b/Camisetas.html
@@ -1,9 +1,13 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sport-App-Camisetas</title>
-  <link rel="stylesheet" href="/css/Fondo.css">
+  <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
+</head>
 
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -62,6 +66,6 @@
   <script src="js/camisetas.js"></script>
   
 </body>
-</head>
+
 
 </html>
