--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/FondoSportApp.css">
 
     </head>
     <body>
