--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -3,9 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
-  
-
+  <title>Camiseta_Ajax</title>
 </head>
 
 <body>
@@ -249,9 +247,6 @@
         <p class="subtitle">RESEÑAS</p>
         <p class="title">RESUMEN DE RESEÑA</p>
         
-    </div>
-    <div class="box">
-        <p class="subtitle">COMPRADOS EN CONJUNTO</p>
     </div>
     <div class="box">
         <aside class="menu">
