--- a/SeleccionBasquet.html
+++ b/SeleccionBasquet.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sección Basquet</title>
-    <link rel="stylesheet" href="css/bulma.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/FondoBasquet.css">
+    <title>Document</title>
 </head>
-<body> 
-    
+<body>
     
 </body>
 </html>
