--- a/SeleccionFutbol.html
+++ b/SeleccionFutbol.html
@@ -1,64 +1,17 @@
-<html>
-    <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sección Futbol</title>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <link rel="stylesheet" href="/css/FondoFutbol.css">
-    </head>
-    <body>
-      <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="">
-            <img src="imag/Logo/Logo.jpg" width="86" height="56">
-          </a>
-          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
-            <a class="navbar-item" href="PaginaInicio.html">
-              Home
-            </a>
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                Futbol
-              </a>
-              <div class="navbar-dropdown">
-                <a class="navbar-item" href="Camisetas.html">
-                  Camiseta
-                </a>
-                <a class="navbar-item" href="Shorts.html">
-                  Shorts
-                </a>
-                <a class="navbar-item" href="SeleccionAccesorios.html">
-                  Accesorios
-                </a>
-                <hr class="navbar-divider">
-                <a class="navbar-item">
-                  Report an issue
-                </a>
-              </div>
-            </div>
-          </div>
-      
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-primary">
-                  <strong>Sign up</strong>
-                </a>
-                <a class="button is-light">
-                  Log in
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/FondoBasquet.css">
+</head>
+<body>
+<audio controls>
+    <source src="imag/y2mate.com - Nirvana  Smells Like Teen Spirit Official Music Video.mp3" type="audio/mp3">
+   
+        Tu navegador no soporta audio HTML5.
+</audio>
+</body>
 </html>
