--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -30,7 +30,7 @@
               </a>
       
               <div class="navbar-dropdown">
-                <a class="navbar-item" href="SeleccionFutbol.html">
+                <a class="navbar-item" href="/Camisetas.html">
                   Futbol
                 </a>
                 <a class="navbar-item">
