--- a/Gorras.html
+++ b/Gorras.html
@@ -57,15 +57,15 @@
     </div>
   </nav>
   <audio controls>
-    <source src="imag/uefa-champions-league-official-theme-song.mp3" type="audio/mp3">
+    <source src="imag/y2mate.com - Nirvana  Smells Like Teen Spirit Official Music Video.mp3" type="audio/mp3">
 
         Tu navegador no soporta audio HTML5.
 </audio>
-  <div id="accesorios">
+  <div id="gorras">
     
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="js/accesorios.js"></script>
+  <script src="js/gorras.js"></script>
   
   
 </body>
