--- a/Camisetas.html
+++ b/Camisetas.html
@@ -37,7 +37,7 @@
             <a class="navbar-item" href="/">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
       </div>
