--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -22,7 +22,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
             <a class="navbar-item"href="">
-              Home
+              Inicio
             </a>
             <div class="navbar-item has-dropdown is-hoverable">
               <a class="navbar-link">
@@ -41,7 +41,7 @@
                 </a>
                 <hr class="navbar-divider">
                 <a class="navbar-item">
-                  Report an issue
+                  Reportar un problema
                 </a>
               </div>
             </div>
