--- a/Botines.html
+++ b/Botines.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bulma.min.css">
-  <title>Document</title>
+  <title>Botines</title>
 </head>
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -24,7 +24,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="PaginaInicio.html">
-          Home
+          Inicio
         </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
@@ -44,7 +44,7 @@
 
             <hr class="navbar-divider">
             <a class="navbar-item">
-              Report an issue
+              Reportar un problema
             </a>
           </div>
         </div>
