--- a/Gorras.html
+++ b/Gorras.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sport-App-Camisetas</title>
+  <title>Sport-App-Gorras</title>
   <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
 </head>
