--- a/Shorts.html
+++ b/Shorts.html
@@ -24,7 +24,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="PaginaInicio.html">
-          Home
+          Inicio
         </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
