--- a/Botines.html
+++ b/Botines.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bulma.min.css">
+  <title>Sport-App-Botines</title>
   <link rel="stylesheet" href="/css/FondoSportApp.css">
-  <title>Botines</title>
+  <link rel="stylesheet" href="/css/bulma.min.css">
 </head>
 
 <body>
+
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="">
-        <img src="/imag/Logo/Logo.jpg" width="86" heigh="56">
+      <a class="navbar-item" href="/Camisetas.html">
+        <img src="/imag/Logo/Logo.jpg" width="112" height="28">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -26,46 +26,119 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="PaginaInicio.html">
-          Inicio
-        </a>
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            Futbol
+          <a class="navbar-link" href="/Camisetas.html">
+            Hombre
           </a>
-
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="Camisetas.html">
-              Camiseta
+            <a class="navbar-item" href="/Camisetas.html">
+              Camisetas
             </a>
-            <a class="navbar-item" href="Shorts.html">
+            <a class="navbar-item" href="/Botines.html">
+              Botines
+            </a>
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
-            <a class="navbar-item" href="SeleccionAccesorios.html">
-              Accesorios
+          </div>
+        </div>
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Mujer
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Camisetas.html">
+              Camisetas
+            </a>
+            <a class="navbar-item" href="">
+              Botines
+            </a>
+            <a class="navbar-item">
+              Shorts
             </a>
 
-            <hr class="navbar-divider">
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Niños
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Camisetas.html">
+              Camisetas
+            </a>
+            <a class="navbar-item" href="">
+              Botines
+            </a>
             <a class="navbar-item">
-              Reportar un problema
+              Shorts
             </a>
           </div>
         </div>
-      </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Marcas
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Camisetas.html">
+              Nike
+            </a>
+            <a class="navbar-item" href="">
+              Adidas
+            </a>
+            <a class="navbar-item">
+              Puma
+            </a>
           </div>
         </div>
-      </div>
-    </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Deportes
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Camisetas.html">
+              Futbol
+            </a>
+            <a class="navbar-item" href="">
+              Basquet
+            </a>
+            <a class="navbar-item">
+              Tenis
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Accesorios
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/Gorras.html">
+              Gorras
+            </a>
+            <a class="navbar-item" href="">
+              Bolsos
+            </a>
+            <a class="navbar-item">
+              Mochilas
+            </a>
+          </div>
+        </div>
+
   </nav>
+  <audio controls>
+    <source src="imag/uefa-champions-league-official-theme-song.mp3" type="audio/mp3">
+
+    Tu navegador no soporta audio HTML5.
+  </audio>
   <div id="botines">
 
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/botines.js"></script>
 
+
 </body>
+
 
 </html>
