--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -30,7 +30,7 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="/">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
             <a class="navbar-item">
