--- a/Camisetas/Camiseta_Real_Madrid_Recambio.html
+++ b/Camisetas/Camiseta_Real_Madrid_Recambio.html
@@ -49,7 +49,7 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
             <a class="navbar-item">
