--- a/Camisetas.html
+++ b/Camisetas.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sport-App-Camisetas</title>
-  <link rel="stylesheet" href="/css/FondoSportApp.css">
+  <link rel="stylesheet" href="/css/FondoFutbol.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
 </head>
 
@@ -100,7 +100,7 @@
             <a class="navbar-item" href="/Camisetas.html">
               Futbol
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/SeleccionBasquet.html">
               Basquet
             </a>
             <a class="navbar-item">
