--- a/Mochila.html
+++ b/Mochila.html
@@ -123,11 +123,11 @@
           
   </nav>
 
-  <div id="shorts">
+  <div id="mochilas">
 
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="js/shorts.js"></script>
+  <script src="js/mochilas.js"></script>
 
 </body>
 
