--- a/Shorts/Short_Seleccion_de_Brasil.html
+++ b/Shorts/Short_Seleccion_de_Brasil.html
@@ -130,14 +130,14 @@
     <div class="tile is-6 is-vertical is-parent">
         <div class="tile is-child box">
              <figure class="image">
-                <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
+                <img src="/imag/imag-Shorts/9.jpg">
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">CAMISETA DE AJAX OFICIAL</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">SHORT NIKE SELECCIÓN DE EL SALVADOR</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
-                <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
+                <p class="subtitle" style="color:grey ;">Azul</p>
                 <br>
                 <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
