--- a/Shorts.html
+++ b/Shorts.html
@@ -115,7 +115,7 @@
           <a class="navbar-item" href="/Gorras.html">
             Gorras
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/Mochila.html">
             Mochilas
           </a>
         </div>
