--- a/Camisetas.html
+++ b/Camisetas.html
@@ -116,7 +116,7 @@
             <a class="navbar-item" href="/Gorras.html">
               Gorras
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Mochilas.html">
               Mochilas
             </a>
           </div>
