--- a/Mochilas.html
+++ b/Mochilas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bulma.min.css">
-  <title>shorts</title>
+  <title>Sport-App-Mochilas</title>
 </head>
 
 <body>
@@ -99,7 +99,7 @@
           <a class="navbar-item" href="/Camisetas.html">
             Futbol
           </a>
-          <a class="navbar-item" href="">
+          <a class="navbar-item" href="/SeleccionBasquet.html">
             Basquet
           </a>
           <a class="navbar-item">
@@ -115,7 +115,7 @@
           <a class="navbar-item" href="/Gorras.html">
             Gorras
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/Mochilas.html">
             Mochilas
           </a>
         </div>
