--- a/Gorras.html
+++ b/Gorras.html
@@ -100,7 +100,7 @@
             <a class="navbar-item" href="/Camisetas.html">
               Futbol
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/SeleccionBasquet.html">
               Basquet
             </a>
             <a class="navbar-item">
@@ -116,7 +116,7 @@
             <a class="navbar-item" href="/Gorras.html">
               Gorras
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Mochilas.html">
               Mochilas
             </a>
           </div>
