--- a/Mochilas/Mochila_Nike_Elemental_Negro.html
+++ b/Mochilas/Mochila_Nike_Elemental_Negro.html
@@ -114,7 +114,7 @@
           <a class="navbar-item" href="/Gorras.html">
             Gorras
           </a>
-          <a class="navbar-item" href="/Mochila.html">
+          <a class="navbar-item" href="/Mochilas.html">
             Mochilas
           </a>
         </div>
