--- a/Botines.html
+++ b/Botines.html
@@ -51,10 +51,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
 
@@ -68,10 +68,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           </div>
@@ -81,7 +81,7 @@
             Marcas
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="/Camisetas.html">
+            <a class="navbar-item" href="/Marcas/Nike.html">
               Nike
             </a>
             <a class="navbar-item" href="">
