--- a/Camisetas.html
+++ b/Camisetas.html
@@ -51,10 +51,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
 
@@ -68,10 +68,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           </div>
