--- a/Shorts.html
+++ b/Shorts.html
@@ -50,10 +50,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           
@@ -67,10 +67,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
         </div>
@@ -99,7 +99,7 @@
           <a class="navbar-item" href="/Camisetas.html">
             Futbol
           </a>
-          <a class="navbar-item" href="">
+          <a class="navbar-item" href="/SeleccionBasquet.html">
             Basquet
           </a>
           <a class="navbar-item">
