--- a/Gorras/Gorra_Puma_Negro_Sb.html
+++ b/Gorras/Gorra_Puma_Negro_Sb.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Gorra-Puma</title>
   
 
 </head>
@@ -130,7 +130,7 @@
     <div class="tile is-6 is-vertical is-parent">
         <div class="tile is-child box">
              <figure class="image">
-                <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
+                <img src="/imag/imag-Gorras/Puma/pumaNegro01.jpg">
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
