--- a/Gorras/Gorra_Nike_Trucker.html
+++ b/Gorras/Gorra_Nike_Trucker.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Gorra-Nike</title>
   
 
 </head>
@@ -130,13 +130,13 @@
     <div class="tile is-6 is-vertical is-parent">
         <div class="tile is-child box">
              <figure class="image">
-                <img src="/imag/imag-Camisetas/Camisetas-PaisesBajos/1.jpg">
+                <img src="/imag/imag-Gorras/Nike/2.jpg">
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">CAMISETA DE AJAX OFICIAL</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Gorra Nike Sb</p>
                 <br>
-                <p class="subtitle" style="color:black ;">$12.000</p>
+                <p class="subtitle" style="color:black ;">$120.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
                 <br>
                 <p class="title" style="color:black;">TALLE ARG:</p>
