--- a/Camisetas/Camiseta_B.Dormun.html
+++ b/Camisetas/Camiseta_B.Dormun.html
@@ -134,9 +134,9 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">CAMISETA DE AJAX OFICIAL</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta Atletic Madrid</p>
                 <br>
-                <p class="subtitle" style="color:black ;">$12.000</p>
+                <p class="subtitle" style="color:black ;">$99.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
                 <br>
                 <p class="title" style="color:black;">TALLE ARG:</p>
