--- a/Camisetas/Camiseta_Cerro_Portenio.html
+++ b/Camisetas/Camiseta_Cerro_Portenio.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Camiseta_Cerro_Portenio</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">CAMISETA DE AJAX OFICIAL</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta Cerro Portenio</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
