--- a/Camisetas/Camiseta_D.I.V.html
+++ b/Camisetas/Camiseta_D.I.V.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Camiseta_D.I.V</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta_D.I.V</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta D.I.V</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
