--- a/Botines/Adidas_X_kids.html
+++ b/Botines/Adidas_X_kids.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Adidas_X_kids</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">BOTIN ADIDAS X KIDS</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Adidas X kids</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Azul/Rojo/Gris</p>
