--- a/Botines/Nike_Premier_II_Soccer_.html
+++ b/Botines/Nike_Premier_II_Soccer_.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Nike_Premier_II_Soccer_</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">BOTIN NIKE PREMIER II SOCCER</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Nike Premier II Soccer</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Dorado/Blanco</p>
