--- a/Botines/Nike_Tiempo_Legend_VII.html
+++ b/Botines/Nike_Tiempo_Legend_VII.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Nike_Tiempo_Legend_VII</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">BOTIN NIKE TIEMPO LEGEND VII</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Nike Tiempo Legend VII</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Azul/Negro</p>
