--- a/Botines/Umbro_Speciali_3_Pro.html
+++ b/Botines/Umbro_Speciali_3_Pro.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Umbro_Speciali_3_Pro</title>
   
 
 </head>
@@ -134,7 +134,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">BOTIN UMBRO SPECIAL 3 PRO</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Umbro Speciali 3 Pro</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Gris/Negro</p>
