--- a/Mochilas/Mochila_Adidas_Celeste.html
+++ b/Mochilas/Mochila_Adidas_Celeste.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
-  <title>Camiseta_Flamengo</title>
+  <title>Mochila_Adidas_Celeste</title>
   
 
 </head>
@@ -130,7 +130,7 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">SHORT PUMA AC MILAN</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">Mochila Adidas Celeste</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Blanco/Rojo</p>
