--- a/Shorts/Short_Seleccion_de_El_Salvador.html
+++ b/Shorts/Short_Seleccion_de_El_Salvador.html
@@ -131,10 +131,10 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">SHORT NIKE SELECCIÓN DE EL SALVADOR</p>
+                <p  class="title" style="text-align:left; color:cornflowerblue ;">SHORT ADIDAS SELECCIÓN ARGENTINA</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
-                <p class="subtitle" style="color:grey ;">Azul</p>
+                <p class="subtitle" style="color:grey ;">Negro/Celeste/Blanco</p>
                 <br>
                 <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
