--- a/Camisetas/Camiseta_Atletic_Madrid.html
+++ b/Camisetas/Camiseta_Atletic_Madrid.html
@@ -32,10 +32,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="/">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
       </div>
@@ -49,10 +49,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           
@@ -69,7 +69,7 @@
             <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
         </div>
@@ -111,13 +111,10 @@
           Accesorios
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/Camisetas.html">
+          <a class="navbar-item" href="/Gorras.html">
             Gorras
           </a>
-          <a class="navbar-item" href="">
-            Bolsos
-          </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/Mochilas.html">
             Mochilas
           </a>
         </div>
