--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -33,7 +33,7 @@
             <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
       </div>
@@ -47,10 +47,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           
@@ -64,10 +64,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
         </div>
@@ -109,13 +109,10 @@
           Accesorios
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/Camisetas.html">
+          <a class="navbar-item" href="/Gorras.html">
             Gorras
           </a>
-          <a class="navbar-item" href="">
-            Bolsos
-          </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/Mochilas.html">
             Mochilas
           </a>
         </div>
