--- a/Mochilas/Mochila_Nike_Elemental_Negro.html
+++ b/Mochilas/Mochila_Nike_Elemental_Negro.html
@@ -49,10 +49,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
           
@@ -66,10 +66,10 @@
             <a class="navbar-item" href="/Camisetas.html">
               Camisetas
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="/Botines.html">
               Botines
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="/Shorts.html">
               Shorts
             </a>
         </div>
@@ -98,7 +98,7 @@
           <a class="navbar-item" href="/Camisetas.html">
             Futbol
           </a>
-          <a class="navbar-item" href="/SeleccionBasquet.html">
+          <a class="navbar-item" href="">
             Basquet
           </a>
           <a class="navbar-item">
