--- a/Botines.html
+++ b/Botines.html
@@ -7,6 +7,7 @@
   <title>Sport-App-Botines</title>
   <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
 </head>
 
 <body>
@@ -123,7 +124,7 @@
         </div>
 
   </nav>
-  <audio controls>
+  <audio autoplay controls>
     <source src="imag/uefa-champions-league-official-theme-song.mp3" type="audio/mp3">
 
     Tu navegador no soporta audio HTML5.
