--- a/Gorras.html
+++ b/Gorras.html
@@ -7,6 +7,7 @@
   <title>Sport-App-Gorras</title>
   <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
 </head>
 
 <body>
