--- a/Mochilas.html
+++ b/Mochilas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/FondoFutbol.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Sport-App-Mochilas</title>
 </head>
 
